--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     </div>
 
     <section class="hero">
-        &nbsp;
+        <div class="content">
+            <h1> Light<span>Code.</span></h1>
+            <p><i>Grows your skill!</i></p>
+            <form action="">
+                <input type="text" class="search">
+                <button type="submit"> Go </button>
+            </form>
+        </div>
     </section>
 </body>
 </html>
